--- a/index.html
+++ b/index.html
@@ -105,14 +105,15 @@
 
         <!-- Right: Profile / Stats -->
         <aside class="glass profile-card" aria-label="Profile summary">
-          <div class="avatar" role="img" aria-label="Profile photo placeholder">
-            <!-- Me: replace this with your real headshot ASAP. -->
-            <!-- <img src="assets/images/profile.jpg" alt="MD Shourav Hossain"> -->
-            <div class="placeholder">
-              Add your photo here<br>
-              <span class="placeholder-sub">(Recommended: clean headshot, neutral background)</span>
-            </div>
+          <div class="avatar">
+            <img
+              src="assets/images/profile.webp"
+              alt="MD Shourav Hossain"
+              loading="lazy"
+            />
           </div>
+        </aside>
+
 
           <div class="mini-grid" aria-label="Quick facts">
             <div class="mini">
