Dark theme update

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <div class="container">
       <div class="nav-inner">
         <a class="brand" href="#top" aria-label="Go to top">
-          <span class="brand-dot" aria-hidden="true"></span>
+          <img
+            src="assets/images/logo.webp"
+            alt=""
+            class="brand-dot"
+            aria-hidden="true"
+          />
           <span class="brand-text">
             MD Shourav Hossain
             <small>IT Officer • DevOps • Cybersecurity</small>
