--- a/index.html
+++ b/index.html
@@ -107,7 +107,13 @@
             Open to serious roles in IT / Security / DevOps
           </span>
 
-          <h1>Build secure, stable systems.<br>Not “just IT support”.</h1>
+          <h1 class="hero-title">
+            <span class="hero-line hero-line--script">Build secure, stable systems.</span>
+            <span class="hero-line hero-line--bold">
+              Not “just IT support”.
+            </span>
+          </h1>
+
 
           <div class="role">
             IT Officer & DevOps Engineer • System Hardening • Monitoring • Incident Prevention
