--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <a href="#achievements">Achievements</a>
             <a href="#contact">Contact</a>
           </nav>
-
+          <a class="btn nav-btn primary" href="assets/files/MD_Shourav_Hossain.pdf" download>
+          Download CV
+          </a>
           <!-- Theme toggle (me: keep it visible, simple, and persistent) -->
           <button
             id="themeToggle"
