--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a class="btn nav-btn primary" href="assets/files/MD_Shourav_Hossain.pdf" download>
           Download CV
           </a>
-          <!-- Theme toggle (me: keep it visible, simple, and persistent) -->
+          <!-- Theme toggle -->
           <button
             id="themeToggle"
             class="theme-toggle"
@@ -185,7 +185,7 @@
       <div class="section-head">
         <div>
           <h2 class="section-title">Experience</h2>
-          <p class="section-sub">Timeline format: faster to scan, more credible than random boxes.</p>
+          <p class="section-sub">Timeline: </p>
         </div>
       </div>
 
@@ -227,7 +227,7 @@
       <div class="section-head">
         <div>
           <h2 class="section-title">Education</h2>
-          <p class="section-sub">Short, clean, and recruiter-friendly.</p>
+          <p class="section-sub">Academic </p>
         </div>
       </div>
 
@@ -259,7 +259,7 @@
       <div class="section-head">
         <div>
           <h2 class="section-title">Skills</h2>
-          <p class="section-sub">Chips for scanning + tools grid for credibility.</p>
+          <p class="section-sub">Tools: </p>
         </div>
       </div>
 
@@ -308,7 +308,7 @@
       <div class="section-head">
         <div>
           <h2 class="section-title">Achievements</h2>
-          <p class="section-sub">Proof beats claims.</p>
+          <p class="section-sub">List: </p>
         </div>
       </div>
 
@@ -336,7 +336,6 @@
             ></iframe>
           </div>
           <p class="muted small mt-14">
-            If the badge fails to load, it’s typically iframe blocking or network restrictions.
           </p>
         </div>
       </div>
@@ -349,7 +348,7 @@
       <div class="section-head">
         <div>
           <h2 class="section-title">Contact</h2>
-          <p class="section-sub">Make it effortless for someone to reach you.</p>
+          <p class="section-sub">Feel free to contact: </p>
         </div>
       </div>
 
