--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <div class="section-head">
         <div>
           <h2 class="section-title">Education</h2>
-          <p class="section-sub">Academic </p>
+          <p class="section-sub">Academic: </p>
         </div>
       </div>
 
