--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <a href="#achievements"><i class="fa-solid fa-award" aria-hidden="true"></i> Achievements</a>
     <a href="#contact"><i class="fa-solid fa-envelope" aria-hidden="true"></i> Contact</a>
   </aside>
-  
+  <img src="https://github-profile-tracker.rhshourav02.workers.dev/myWebPage" />
   <!-- HERO -->
   <main id="top" class="hero">
     <div class="container">
